--- a/PWApi/Views/Home/Index.cshtml
+++ b/PWApi/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 			<div class="panel-body">
 				<ul class="list-unstyled" data-bind="foreach: clients">
 					<li>
-						<strong><span data-bind="text: ClientName"></span></strong>: <span data-bind="text: ClientBalance"></span>
+						<strong><span data-bind="text: Id"></span></strong>: <span data-bind="text: Description"></span>
 						<small><a href="#">Details</a></small>
 					</li>
 				</ul>
