basic tr list created

--- a/PWApi/Views/Home/Index.cshtml
+++ b/PWApi/Views/Home/Index.cshtml
@@ -11,13 +11,13 @@
 	<div class="col-md-4">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h2 class="panel-title">Clients</h2>
+				<h2 class="panel-title">Transactions</h2>
 			</div>
 			<div class="panel-body">
-				<ul class="list-unstyled" data-bind="foreach: clients">
+				<ul class="list-unstyled" data-bind="foreach: transactions">
 					<li>
 						<strong><span data-bind="text: Id"></span></strong>: <span data-bind="text: Description"></span>
-						<small><a href="#">Details</a></small>
+						<small><a href="#">Copy</a></small>
 					</li>
 				</ul>
 			</div>
